fix: remove white space

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header{
-    margin: 0 auto 40px auto;
+    margin: 0 auto 60px auto;
     padding-top: 45px;
     max-width: 880px;
     width: calc(100% - 2 * 200px);
