--- a/src/blocks/login/__form/login__form.css
+++ b/src/blocks/login/__form/login__form.css
@@ -1,6 +1,5 @@
 .login__form{
-    margin: 0 auto;
-    padding-bottom: 120px;
+    margin: 0 auto 120px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
