--- a/src/blocks/login/__submit-button/login__submit-button.css
+++ b/src/blocks/login/__submit-button/login__submit-button.css
@@ -1,5 +1,5 @@
 .login__submit-button {
-    margin: 0 auto 15px auto;
+    margin: 0;
     width: 100%;
     border: 1px solid #000000;
     width: 100%;
