--- a/src/blocks/login/login.css
+++ b/src/blocks/login/login.css
@@ -1,5 +1,4 @@
 .login{
     margin: 0 auto;
-    padding-top: 60px;
     background-color: black;
 }
