--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page{
     min-width: 320px;
+    min-height: 100vh;
     margin: auto;
     background-color: black;
     font-family: 'Inter', Arial, sans-serif;
