--- a/src/blocks/register/__form/register__form.css
+++ b/src/blocks/register/__form/register__form.css
@@ -1,6 +1,5 @@
 .register__form{
-    margin: 0 auto;
-    padding-bottom: 80px;
+    margin: 0 auto 80px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
