--- a/src/blocks/register/register.css
+++ b/src/blocks/register/register.css
@@ -1,5 +1,4 @@
 .register{
     margin: 0 auto;
-    padding-top: 60px;
     background-color: black;
 }
